--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "pestphp/pest": "^1.16",
-        "pestphp/pest-plugin-laravel": "^1.1"
+        "pestphp/pest-plugin-laravel": "^1.1",
+        "yajra/laravel-datatables-oracle": "10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
